@@ -18,6 +18,11 @@ License:
   - LGPL
   - No warranty of any kind is given.  Not liable for data loss or corruption.  Use at your own risk.
 
+Usage:
+  - jfMonitor is a multi-client / server setup
+  - each client will report file system usage to the server
+  - any client (or server) can also ping any locally connected network which requires pcap installed.
+
 WebSite : http://jfmonitor.sf.net
 
 Source Code : https://github.com/pquiring/javaforce/tree/master/projects/jfmonitor
@@ -25,5 +30,5 @@ Source Code : https://github.com/pquiring/javaforce/tree/master/projects/jfmonit
 Author : Peter Quiring
 eMail : pquiring at gmail dot com
 
-Version : 0.1
-Date : 4/?/2022
+Version : 0.2
+Date : 4/25/2022
