@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension" xmlns:fire="http://schemas.microsoft.com/wix/FirewallExtension">
-  <Product Id="*" UpgradeCode="{B962752C-309D-417E-8A68-385F1F04F558}" Version="0.1" Language="1033" Name="jfMonitor" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{B962752C-309D-417E-8A68-385F1F04F558}" Version="0.2" Language="1033" Name="jfMonitor" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
